code/force-app/main/default/objects/FinServ__UseStandardTrigger__mdt/fields/FinServ__Active__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Standard trigger runs instead of packaged trigger.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>