code/force-app/main/default/objects/FinServ__UseStandardTrigger__mdt/fields/FinServ__Object__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Object__c</fullName>
    <description>Objects currently available in Salesforce platform.</description>
    <label>Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>