code/force-app/main/default/objects/FinServ__UseStandardTrigger__mdt/fields/FinServ__TriggerEvents__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TriggerEvents__c</fullName>
    <description>Events currently available to run in Salesforce platform.</description>
    <label>Trigger Events</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>